<resources>
    <string name="app_name">OnlineShop</string>
    <string name="title_activity_products_categories">ProductsCategoriesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="categories">دسته بندی ها</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="account">نمایه من</string>

    <string name="products_category">دسته بندی محصولات:</string>
    <string name="item_category"> کالا </string>
    <string name="item_product"> تومان </string>
    <string name="add_to_cart"> افزودن به سبد خرید </string>
    <string name="filters"> فیلترها </string>
    <string name="sendOrder"> ثبت سفارش </string>

    <string name="popular_list">محبوب ترین محصولات:</string>
    <string name="newest_list">جدیدترین محصولات:</string>
    <string name="top_list">بهترین محصولات :</string>

    <string name="search_hint">جستجو در کالاها</string>
    <string name="search_result">محصولات جستجو شده:</string>
    <string name="related_items">محصولات مشابه:</string>
    <string name="review_item">نظرات:</string>

    <string name="sort">مرتب سازی</string>
    <string name="best_sellers">پرفروش ترین ها</string>
    <string name="most_expensive">گران ترین ها</string>
    <string name="cheapest">ارزان ترین ها</string>
    <string name="newest">جدید ترین ها</string>

    <string name="choose_hour"> انتخاب ساعت هشدار </string>
    <string name="three_hour"> 3 ساعت یک بار</string>
    <string name="five_hour"> 5 ساعت یک بار </string>
    <string name="eight_hour"> 8 ساعت یک بار</string>
    <string name="twelve_hour"> 12 ساعت یک بار</string>
    <string name="choose_clock"> تنظیم هشدار </string>
    <string name="remove_alarm"> غیرفعال کردن </string>

    <string name="channel_id">online_shop_channel_id</string>
    <string name="channel_name">OnlineShop Channel</string>
    <string name="channel_description">This is notification channel for OnlineShop</string>

    <string name="new_product_title">New Product in Online Shop</string>
    <string name="new_product_text">You have a new product in OnlineShop.</string>

    <string name="address"> آدرس خود را وارد کنید</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="sign_in">ثبت نام</string>
    <string name="question"> آیا قبلا ثبت نام کرده اید؟ </string>
    <string name="login">ورورد</string>
    <string name="cancel">انصراف</string>
    <string name="rate"> امتیاز </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_to_account">برای ورورد به حساب کاربری ایمیل خود را وارد کنید:</string>
    <string name="invalidate_email">ایمیل شما نامعتبر است.</string>
    <string name="sign_in_successful">ثبت نام شما انجام شد.</string>
    <string name="invalidate_email_or_registered">\" قبلا ثبت نام کرده اید یا ایمیل شما نامعتبر است.\"</string>
    <string name="please_login">برای ثبت سفارش باید ابتدا وارد حساب کاربری خود شوید</string>
    <string name="navigate_to_account">ورود به حساب کاربری</string>
    <string name="coupon_code">کد تخفیف:</string>
    <string name="send_to">ارسال به:</string>
    <string name="your_total_price">جمع کل خرید شما:</string>
    <string name="send">ثبت</string>
    <string name="send_order">ارسال سفارش</string>
    <string name="description">توضیحات:</string>
    <string name="send_description">ارسال نظر:</string>
    <string name="your_rating">امتیاز شما به این محصول(0-5)</string>
    <string name="name">نام</string>
    <string name="send_review_successfuly">نظر شما ارسال شد</string>
    <string name="please_try_again">لطفا مجددا تلاش کنید</string>
    <string name="ad_address">افزودن آدرس جدید</string>
    <string name="list_of_addresses">لیست همه ی آدرس ها</string>
    <string name="send_user_order">سفارش شما ارسال شد</string>
</resources>