<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="accountViewModel"
            type="com.example.onlineshop.viewmodel.AccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_account"
            android:textSize="16sp"
            android:layout_margin="24dp"
            android:layout_gravity="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:onTextChanged="@{accountViewModel::onTextChangedLoginEmail}"
            android:padding="8dp"
            android:layout_margin="24dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/purple"
            android:onClick="@{() -> accountViewModel.getLogin()}"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</layout>