<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sendOrderViewModel"
            type="com.example.onlineshop.viewmodel.SendOrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SendOrderFragment">

        <TextView
            android:id="@+id/tv_send_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:text="@string/send_to"
            android:textColor="@color/purple"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/tv_send_to"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginRight="36dp"
            android:text="@{sendOrderViewModel.customerLiveData.userName}"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_total_price"
            app:layout_constraintTop_toBottomOf="@id/tv_send_to"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/tv_total"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            android:layout_margin="16dp"
            android:text="@{sendOrderViewModel.setTotalPrice()}"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_code"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total"
            app:layout_constraintBottom_toBottomOf="@id/et_coupon_code"
            android:layout_margin="16dp"
            android:textColor="@color/purple"
            android:textSize="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_coupon_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@id/tv_coupon"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price"
            android:layout_margin="16dp"
            android:onTextChanged="@{sendOrderViewModel::onTextChangedCoupon}"
            />

        <Button
            android:id="@+id/send_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price"
            app:layout_constraintRight_toLeftOf="@id/et_coupon_code"
            android:layout_margin="16sp" />

        <Button
            android:id="@+id/send_order"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_coupon_code"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="24dp"
            android:text="@string/send_order"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="@{() -> sendOrderViewModel.sendOrder()}"
            android:backgroundTint="@color/purple" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

