<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="accountViewModel"
            type="com.example.onlineshop.viewmodel.AccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.AccountFragment">

        <RelativeLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/iv_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:onClick="@{() -> accountViewModel.alarmClicked()}"
                android:src="@drawable/ic_active_alarm" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="337dp"
            android:layout_height="563dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#F3F3F3"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="2dp"
                    app:errorEnabled="true"
                    app:helperText="*Required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_user_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:padding="2dp"
                    app:errorEnabled="true"
                    app:helperText="*Required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_alignBottom="@id/et_address"
                        android:layout_alignTop="@id/et_address"
                        android:src="@drawable/ic_location"
                        android:onClick="@{() -> accountViewModel.locationClicked()}"/>

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:layout_gravity="right"
                        android:padding="12dp"
                        app:errorEnabled="true" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:backgroundTint="@color/purple"
                    android:onClick="@{() -> accountViewModel.signInClick()}"
                    android:text="@string/sign_in"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>