<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productPageViewModel"
            type="com.example.onlineshop.viewmodel.ProductPageViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".view.fragment.ProductPageFragment">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="6dp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="#5A5A5A"
                        app:sliderIndicatorUnselectedColor="#FFF"
                        app:sliderScrollTimeInSec="3"
                        app:sliderStartAutoCycle="true" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="16dp"
                    android:text="@{productPageViewModel.productItemLiveData.productName}"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text = "@string/description"
                    android:layout_marginTop="16dp"
                    android:textColor="#66038F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="16dp"
                    android:text="@{productPageViewModel.productItemLiveData.description}"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text = "@string/review_item"
                    android:layout_marginTop="16dp"
                    android:textColor="#66038F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:textColor="#66038F"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/your_rating"/>

                <EditText
                    android:id="@+id/et_your_rate"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:onTextChanged="@{productPageViewModel::onTextChangedRating}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text = "@string/send_description"
                    android:layout_marginTop="16dp"
                    android:textColor="#66038F"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_review"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:onTextChanged="@{productPageViewModel::onTextChangedReview}" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple"
                    android:text="ثبت نظر"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:onClick="@{() -> productPageViewModel.sendReview()}"/>

                <TextView
                    android:id="@+id/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:text = "@string/related_items"
                    android:layout_marginTop="16dp"
                    android:textColor="#66038F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="#ffffff"
                android:padding="8dp"
                android:text="@{productPageViewModel.productItemLiveData.productPrice  + @string/item_product}"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:textStyle="bold"
                android:backgroundTint="@color/purple"
                android:onClick="@{() -> productPageViewModel.addToCartClicked()}"
                android:text="@string/add_to_cart"
                android:textSize="18sp" />

        </RelativeLayout>

    </FrameLayout>

</layout>